<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moj_tekst"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moje_przywitanie"
        tools:layout_editor_absoluteX="144dp"
        android:background="@color/secondColor"
        tools:layout_editor_absoluteY="197dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moje_samopoczucie"
        tools:layout_editor_absoluteX="125dp"
        android:background="@color/thirdColor"
        tools:layout_editor_absoluteY="258dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moje_sniadanie"
        tools:layout_editor_absoluteX="125dp"
        android:background="@color/firstColor"
        tools:layout_editor_absoluteY="317dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moje_ubrania"
        tools:layout_editor_absoluteX="32dp"
        android:background="@color/secondColor"
        tools:layout_editor_absoluteY="366dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Opis_pogody"
        tools:layout_editor_absoluteX="113dp"
        android:background="@color/firstColor"
        tools:layout_editor_absoluteY="415dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="295dp"
        tools:layout_editor_absoluteX="1dp"
        android:background="@drawable/obrazek"
        tools:layout_editor_absoluteY="435dp">

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>